# polybar

./: .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .exrc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .valgrind-suppressions  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUPPORT.md  TODO  build.sh  bump.sh  config  config.cmake  flake.nix  mpris.xml  version.sh  version.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  codecov.yml
.hooks/: pre-commit
cmake/: 00-components.cmake  01-core.cmake  02-opts.cmake  03-libs.cmake  04-targets.cmake  05-summary.cmake  cxx.cmake  (+3 more)
config/: CMakeLists.txt  config.cmake
doc/: CMakeLists.txt  README.md  conf.py  conf.py.in  config  config.cmake  config.ini  config.lua  configdomain.py  index.rst  requirements.txt
doc/_templates/: layout.html
doc/bash/: CMakeLists.txt  polybar
doc/dev/: getting-started.rst  packaging.rst  release-workflow.rst  style-guide.rst  testing.rst
doc/man/: polybar-msg.1.rst  polybar.1.rst  polybar.5.rst
doc/migration/: index.rst
doc/migration/3.7/: index.rst  tray.rst
doc/user/: actions.rst  default-config.rst  ipc.rst
doc/user/fonts/: index.rst  nerd-fonts.rst
doc/user/modules/: defs.rst  index.rst  tray.rst
doc/zsh/: CMakeLists.txt  _polybar  _polybar_msg
examples/: CMakeLists.txt  config  config.bspwm  config.cmake  config.i3  config.i3.edp1  config.i3.hdmi1  config.test  config.white  external_top
lib/: CMakeLists.txt
lib/boost/include/boost/: di.hpp
lib/cctz/: CMakeLists.txt
lib/cctz/include/cctz/: civil_time.h  civil_time_detail.h  time_zone.h  zone_info_source.h
lib/cctz/src/: civil_time_detail.cc  time_tool.cc  time_zone_fixed.cc  time_zone_fixed.h  time_zone_format.cc  time_zone_if.h  time_zone_impl.cc  time_zone_impl.h  time_zone_info.cc  time_zone_info.h  time_zone_libc.cc  time_zone_libc.h  time_zone_lookup.cc  time_zone_posix.cc  tzfile.h
lib/concurrentqueue/include/moodycamel/: blockingconcurrentqueue.h  concurrentqueue.h
lib/fastdelegate/include/fastdelegate/: delegate.hpp  fastdelegate.hpp  signal.hpp
lib/sol2/: LICENSE.txt
lib/sol2/sol/: config.hpp  forward.hpp  sol.hpp
man/: .gitignore  CMakeLists.txt  Makefile  lemonbuddy.1  lemonbuddy_config.5  lemonbuddy_terminate.1  lemonbuddy_wrapper.1  polybar.1  polybar.1.cmake  polybar_config.5
src/: CMakeLists.txt  bar.cpp  eventloop.cpp  ipc.cpp  lemonbuddy.cpp  main.cpp  mpris-generated.c  polybar-msg.cpp  registry.cpp  settings.cpp.cmake
src/adapters/: CMakeLists.txt  alsa.cpp  mpd.cpp  mpris-generated.c  mpris.cpp  net.cpp  net_iw.cpp  net_nl.cpp  oss.cpp  pulseaudio.cpp  pulseaudio_sink.cpp  pulseaudio_source.cpp  script_runner.cpp
src/adapters/alsa/: control.cpp  mixer.cpp
src/cairo/: CMakeLists.txt  utils.cpp
src/components/: CMakeLists.txt  bar.cpp  builder.cpp  command_line.cpp  config.cpp  config_base.cpp  config_ini.cpp  config_lua.cpp  config_parser.cpp  controller.cpp  eventloop.cpp  icon_manager.cpp  ipc.cpp  ipc_client.cpp  logger.cpp  parser.cpp  renderer.cpp  screen.cpp  signals.cpp  taskqueue.cpp  types.cpp
src/drawtypes/: CMakeLists.txt  animation.cpp  bar.cpp  icon.cpp  iconset.cpp  label.cpp  labellist.cpp  layouticonset.cpp  progressbar.cpp  ramp.cpp
src/events/: CMakeLists.txt  signal_emitter.cpp  signal_receiver.cpp
src/interfaces/: alsa.cpp  mpd.cpp  net.cpp
src/ipc/: client.cpp  decoder.cpp  encoder.cpp  ipc.cpp  util.cpp
src/modules/: CMakeLists.txt  alsa.cpp  backlight.cpp  base.cpp  battery.cpp  bspwm.cpp  cmdscript.cpp  counter.cpp  cpu.cpp  cpu_adapter.cpp  date.cpp  disk_io.cpp  dwm.cpp  fs.cpp  github.cpp  i3.cpp  ipc.cpp  memory.cpp  menu.cpp  mpd.cpp  mpris.cpp  network.cpp  oss.cpp  pulseaudio.cpp  script.cpp  systray.cpp  tailscript.cpp  temperature.cpp  text.cpp  torrent.cpp  tray.cpp  volume.cpp  xbacklight.cpp  xkeyboard.cpp  xwindow.cpp  xworkspaces.cpp
src/modules/meta/: base.cpp  factory.cpp  inotify_module.cpp
src/services/: builder.cpp  command.cpp  event_throttler.cpp  inotify.cpp  logger.cpp  store.cpp
src/tags/: action_context.cpp  context.cpp  dispatch.cpp  parser.cpp
src/utils/: CMakeLists.txt  action_router.cpp  actions.cpp  base64.cpp  bspwm.cpp  cli.cpp  color.cpp  command.cpp  concurrency.cpp  config.cpp  env.cpp  factory.cpp  file.cpp  http.cpp  i3.cpp  inotify.cpp  io.cpp  plugin.cpp  proc.cpp  process.cpp  restack.cpp  socket.cpp  string.cpp  throttle.cpp  timer.cpp  udev.cpp  units.cpp  xcb.cpp  xlib.cpp
src/x11/: CMakeLists.txt  atoms.cpp  background_manager.cpp  color.cpp  connection.cpp  cursor.cpp  draw.cpp  events.cpp  ewmh.cpp  fontmanager.cpp  fonts.cpp  graphics.cpp  icccm.cpp  legacy_tray_manager.cpp  randr.cpp  registry.cpp  tray.cpp  tray_client.cpp  tray_manager.cpp  window.cpp  winspec.cpp  wm.cpp  xembed.cpp  xkb.cpp  xlib.cpp  xresources.cpp  xutils.cpp
src/x11/extensions/: composite.cpp  damage.cpp  randr.cpp  render.cpp  sync.cpp  xkb.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  runner.cpp  test_config.ini  unit_test.hpp
tests/common/: config_test.hpp  test.hpp
tests/components/: test_command_line.cpp  test_di.cpp  test_logger.cpp
tests/components/x11/: test_color.cpp  test_connection.cpp  test_window.cpp
tests/unit_tests/: main.cpp
tests/unit_tests/components/: bar.cpp  builder.cpp  command_line.cpp  config.cpp  config_parser.cpp  di.cpp  ipc_client.cpp  logger.cpp  parser.cpp
tests/unit_tests/components/x11/: color.cpp  connection.cpp  window.cpp
tests/unit_tests/drawtypes/: iconset.cpp  label.cpp  labellist.cpp  layouticonset.cpp  ramp.cpp
tests/unit_tests/ipc/: client.cpp  decoder.cpp  encoder.cpp  util.cpp
tests/unit_tests/tags/: action_context.cpp  dispatch.cpp  parser.cpp
tests/unit_tests/utils/: action_router.cpp  actions.cpp  color.cpp  command.cpp  env.cpp  file.cpp  math.cpp  memory.cpp  process.cpp  scope.cpp  string.cpp  units.cpp
tests/unit_tests/x11/: color.cpp  connection.cpp  window.cpp  winspec.cpp
tests/utils/: test_memory.cpp  test_scope.cpp  test_string.cpp
(+316 files in other folders)
